--- a/trip-face/css/operator.css
+++ b/trip-face/css/operator.css
@@ -1,6 +1,11 @@
+*{
+	margin: 0px;
+	padding: 0px;
+}
 #page {
 	width: 1903px;
 	height: 1080px;
+	background-color: #F2F2F2;
 }
 
 #titleTab #myTab {
@@ -63,4 +68,62 @@
 }
 #group_title > ul >li{
 	float: left;
+}
+
+#nav{
+	width: 1571px;
+	height: 59px;
+	background-color: #ffffff;
+	border-radius: 4px;
+	margin-left: 290px;
+}
+#nav ul li{
+	float: left;
+	text-align: center;
+	line-height: 59px;
+	width: 450px;
+	font-family: PingFang-SC-Bold;
+	font-size: 18px;
+	font-weight: normal;
+	font-stretch: normal;
+	letter-spacing: 0px;
+	color: #373535;
+}
+
+#nav ul li a{
+	color: black;
+}
+
+#nav ul li a:hover{
+	color: #08A2F3;
+	text-decoration:none;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+#con_table_1{
+	width: 1571px;
+	margin-left: 285px;
+	margin-top: 10px;
+	border-radius: 4px;
+	/*display: none;*/
+}
+
+.box{
+	width: 516px;
+	height: 274px;
+	background-color: #ffffff;
+	border-radius: 4px;
+	margin:5px;
+}
+#footer{
+	height: 80px;
+	text-align: center;
+	font-family: PingFang-SC-Regular;
+	font-size: 12px;
+	font-weight: normal;
+	font-stretch: normal;
+	line-height: 70px;
+	letter-spacing: 0px;
+	color: #373535;
 }
